--- a/noteappdemo/src/main/resources/org/demo/bpm/noteappdemo.FileNewNote-taskform.form
+++ b/noteappdemo/src/main/resources/org/demo/bpm/noteappdemo.FileNewNote-taskform.form
@@ -4,52 +4,7 @@
 <property name="name" value="noteappdemo.FileNewNote-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="note_title" type="InputText" id="1984149883">
-<property name="fieldRequired" value="true"/>
-<property name="labelCSSClass" value=""/>
-<property name="labelCSSStyle" value=""/>
-<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Titlequot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Title/Headline for notequot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="readonly" value="false"/>
-<property name="size" value="50"/>
-<property name="formula" value=""/>
-<property name="rangeFormula" value=""/>
-<property name="pattern" value=""/>
-<property name="maxlength" value="50"/>
-<property name="styleclass" value=""/>
-<property name="cssStyle" value=""/>
-<property name="isHTML" value="false"/>
-<property name="hideContent" value="false"/>
-<property name="defaultValueFormula" value=""/>
-<property name="inputBinding" value="note/title"/>
-<property name="outputBinding" value=""/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="1" name="note_notetxt" type="InputTextArea" id="1676840392">
-<property name="fieldRequired" value="true"/>
-<property name="height" value="8"/>
-<property name="labelCSSClass" value=""/>
-<property name="labelCSSStyle" value=""/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Note Textquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Note text to be filedquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="readonly" value="false"/>
-<property name="size" value="60"/>
-<property name="formula" value=""/>
-<property name="rangeFormula" value=""/>
-<property name="pattern" value=""/>
-<property name="maxlength" value="5000"/>
-<property name="styleclass" value=""/>
-<property name="cssStyle" value=""/>
-<property name="isHTML" value="false"/>
-<property name="hideContent" value="false"/>
-<property name="defaultValueFormula" value=""/>
-<property name="inputBinding" value="note/notetxt"/>
-<property name="outputBinding" value=""/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="2" name="note_project" type="InputText" id="517817728">
+<field position="0" name="note_project" type="InputText" id="517817728">
 <property name="fieldRequired" value="false"/>
 <property name="labelCSSClass" value=""/>
 <property name="labelCSSStyle" value=""/>
@@ -71,7 +26,7 @@
 <property name="outputBinding" value=""/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="3" name="note_budgetAmount" type="InputTextBigDecimal" id="274511462">
+<field position="1" name="note_budgetAmount" type="InputTextBigDecimal" id="274511462">
 <property name="fieldRequired" value="false"/>
 <property name="labelCSSClass" value=""/>
 <property name="labelCSSStyle" value=""/>
@@ -89,7 +44,7 @@
 <property name="outputBinding" value=""/>
 <property name="fieldClass" value="java.math.BigDecimal"/>
 </field>
-<field position="4" name="note_manHours" type="InputTextLong" id="1760704228">
+<field position="2" name="note_manHours" type="InputTextLong" id="1760704228">
 <property name="fieldRequired" value="false"/>
 <property name="groupWithPrevious" value="true"/>
 <property name="labelCSSClass" value=""/>
@@ -108,5 +63,9 @@
 <property name="outputBinding" value=""/>
 <property name="fieldClass" value="java.lang.Long"/>
 </field>
-<dataHolder inputId="" name="#0000A0" type="className" outId="note" value="org.demo.model.Note" id="note"/>
+<dataHolder inputId="" name="#0000A0" type="className" outId="budgetAmount" value="java.math.BigDecimal" id="budgetAmount"/>
+<dataHolder inputId="" name="#FF8881" type="basicType" outId="manHours" value="java.lang.Long" id="manHours"/>
+<dataHolder inputId="" name="#FF54A7" type="basicType" outId="notetxt" value="java.lang.String" id="notetxt"/>
+<dataHolder inputId="" name="#A7E690" type="basicType" outId="project" value="java.lang.String" id="project"/>
+<dataHolder inputId="" name="#0000A0" type="basicType" outId="title" value="java.lang.String" id="title"/>
 </form>
