--- a/noteappdemo/src/main/resources/org/demo/bpm/noteappdemo.FileNewNote-taskform.form
+++ b/noteappdemo/src/main/resources/org/demo/bpm/noteappdemo.FileNewNote-taskform.form
@@ -4,66 +4,42 @@
 <property name="name" value="noteappdemo.FileNewNote-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="note_project" type="InputText" id="517817728">
+<field position="0" name="title" type="InputText" id="186488599">
 <property name="fieldRequired" value="false"/>
-<property name="labelCSSClass" value=""/>
-<property name="labelCSSStyle" value=""/>
-<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Projectquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="readonly" value="false"/>
-<property name="size" value="50"/>
-<property name="formula" value=""/>
-<property name="rangeFormula" value=""/>
-<property name="pattern" value=""/>
-<property name="maxlength" value="50"/>
-<property name="styleclass" value=""/>
-<property name="cssStyle" value=""/>
-<property name="isHTML" value="false"/>
-<property name="hideContent" value="false"/>
-<property name="defaultValueFormula" value=""/>
-<property name="inputBinding" value="note/project"/>
-<property name="outputBinding" value=""/>
+<property name="label" value="quot;enquot;,quot;title (title)quot;"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="title"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="1" name="note_budgetAmount" type="InputTextBigDecimal" id="274511462">
+<field position="1" name="notetxt" type="InputText" id="1916698015">
 <property name="fieldRequired" value="false"/>
-<property name="labelCSSClass" value=""/>
-<property name="labelCSSStyle" value=""/>
-<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Budgetquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Proposed Budgetquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="readonly" value="false"/>
-<property name="size" value=""/>
-<property name="formula" value=""/>
-<property name="rangeFormula" value=""/>
-<property name="styleclass" value=""/>
-<property name="cssStyle" value=""/>
-<property name="defaultValueFormula" value=""/>
-<property name="inputBinding" value="note/budgetAmount"/>
-<property name="outputBinding" value=""/>
-<property name="fieldClass" value="java.math.BigDecimal"/>
+<property name="label" value="quot;enquot;,quot;notetxt (notetxt)quot;"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="notetxt"/>
+<property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="2" name="note_manHours" type="InputTextLong" id="1760704228">
+<field position="2" name="project" type="InputText" id="1278180378">
 <property name="fieldRequired" value="false"/>
-<property name="groupWithPrevious" value="true"/>
-<property name="labelCSSClass" value=""/>
-<property name="labelCSSStyle" value=""/>
-<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Man Hoursquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Estimated Man Hoursquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="readonly" value="false"/>
-<property name="size" value=""/>
-<property name="formula" value=""/>
-<property name="rangeFormula" value=""/>
-<property name="styleclass" value=""/>
-<property name="cssStyle" value=""/>
-<property name="defaultValueFormula" value=""/>
-<property name="inputBinding" value="note/manHours"/>
-<property name="outputBinding" value=""/>
+<property name="label" value="quot;enquot;,quot;project (project)quot;"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="project"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="manHours" type="InputTextLong" id="161180663">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;manHours (manHours)quot;"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="manHours"/>
 <property name="fieldClass" value="java.lang.Long"/>
 </field>
-<dataHolder inputId="" name="#0000A0" type="className" outId="budgetAmount" value="java.math.BigDecimal" id="budgetAmount"/>
+<field position="4" name="budgetAmount" type="InputTextBigDecimal" id="256774385">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;budgetAmount (budgetAmount)quot;"/>
+<property name="inputBinding" value=""/>
+<property name="outputBinding" value="budgetAmount"/>
+<property name="fieldClass" value="java.math.BigDecimal"/>
+</field>
+<dataHolder inputId="" name="#FBB767" type="basicType" outId="budgetAmount" value="java.math.BigDecimal" id="budgetAmount"/>
 <dataHolder inputId="" name="#FF8881" type="basicType" outId="manHours" value="java.lang.Long" id="manHours"/>
 <dataHolder inputId="" name="#FF54A7" type="basicType" outId="notetxt" value="java.lang.String" id="notetxt"/>
 <dataHolder inputId="" name="#A7E690" type="basicType" outId="project" value="java.lang.String" id="project"/>
